# backendery-lets-start

./: .cursorignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  Secrets.toml.example
.cursor/rules/: rust-rule.mdc
.github/: SECURITY.md
.github/workflows/: ci.yml
configs/: default.toml
src/: configs.rs  cors.rs  main.rs
src/api/: errors.rs  handlers.rs  mod.rs  models.rs  requests.rs  responses.rs
src/services/: mailer.rs
