[package]
description = "A tiny `Rust` microservice that allows sending a message from the `Let's start` form"
edition = "2024"
license = "Business Source License 1.1"
name = "backendery-lets-start"
readme = "README.md"
repository = "https://github.com/backendery/backendery-lets-start"
rust-version = "1.90.0"
version = "0.1.6"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.4"
config = "0.15.6"
convert_case = "0.6.0"
lettre = { version = "0.11.7", features = ["builder", "tokio1-native-tls"] }
regex = "1.11.1"
sentry = "0.37.0"
serde = { version = "1.0.203", features = ["derive"] }
shuttle-axum = "0.55.0"
shuttle-runtime = { version = "0.55.0", default-features = false }
thiserror = "1.0.61"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-retry = "0.3.0"
tower = "0.5.2"
tower-http = { version = "0.5.2", features = [
    "cors",
    "propagate-header",
    "request-id",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "json",
    "time",
] }
url = "2.5.4"
urlencoding = "2.1.3"
validator = { version = "0.18.1", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"